Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124658

QAbstractCameraController documentation contains mistakes

XMLWordPrintable

    • 6b1c81d46 (dev), d29ad7e24 (6.7), 1e975c6cc (tqtc/lts-6.5)

      The documentation states the following. But frameActionTriggered() does not exist. moveCamera seems to be correct.

      Derived classes need only implement the frameActionTriggered() method to move the camera.

      Also, looking at the source code, there are struct InputState and moveCamera methods, but there is no documentation for them.

      https://doc.qt.io/qt-6/qt3dextras-qabstractcameracontroller.html

        For Gerrit Dashboard: QTBUG-124658
        # Subject Branch Project Status CR V

            lexcaz Alexei Cazacov
            shin1_okada Shinichi Okada (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes