Docs: Update the QAbstractCameraController overview

Removed a reference to a non-existent method.

Task-number: QTBUG-124658
Pick-to: 6.5
Change-Id: Ie036f611d2b2707f98b2bfe699bcf5d1e94318e1
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
(cherry picked from commit 6b1c81d463d2dbac8f80a0bd476e9367727cf969)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>